--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
   },
   "dependencies": {
     "next": "13.5.6",
+    "peerjs": "^1.5.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-player": "^2.16.0",
     "socket.io": "^4.7.4",
-    "socket.io-client": "^4.7.4"
+    "socket.io-client": "^4.7.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
-    "tailwindcss": "^3"
+    "postcss-nesting": "^12.1.0",
+    "tailwindcss": "^3",
+    "typescript": "^5.7.3"
   }
 }
